Update schedule's functions
